# gradio-webview-binding

./: .gitignore  LICENSE  README.md  app.py  bootstrap.py  pyoxidizer.bzl  pyproject.toml  view.py
gradio_gui_app/: __main__.py  app.py  bootstrap.py
