
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gradio-webview"
version = "0.1.0"
dependencies = [
    "pywebview",
    "gradio",
]


[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"docs/.hooks/*" = ["INP001", "T201"]



[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "/tests",
]
exclude = [
  "*.json",
  "pkg/_compat.py",
]