
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gradio-webview"
version = "0.1.0"
dependencies = [
    "pywebview",
    "gradio",
]

[project.gui-scripts]
gradio-gui-demo = "gradio_gui_app.bootstrap:main"

[tool.hatch.build.targets.sdist]
include = [
  "gradio_gui_app/*.py",
]
exclude = [
  "*.json",
]


[tool.hatch.build.targets.wheel]
packages = [
  "gradio_gui_app",
]


[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"docs/.hooks/*" = ["INP001", "T201"]

